Include hostId parameter in GET reports/recordings